syntax = "proto3";
option go_package = "../internal/app/service";
package service;

import "api/feed.proto";

// 1. 点赞
message FavoriteActionRequest {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  int32 action_type = 3; // 1-点赞，2-取消点赞
}

message FavoriteActionResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}

// 2. 喜欢列表
message FavoriteListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message FavoriteListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  repeated VideoFeed video_list = 3; // 用户点赞视频列表
}

service Favorite {
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse) {}
  rpc GetFavoriteList(FavoriteListRequest) returns (FavoriteListResponse) {}
}